fix #16: change body element properties to prevent layout shift while triggering modal dialogs - change buttons arrangement in sessionConflictDialog

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,12 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
+  --color-card-hover: var(--card-hover);
   --color-card-foreground: var(--card-foreground);
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
+  --color-primary-hover: var(--primary-hover);
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
@@ -23,6 +25,7 @@
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
+  --color-destructive-hover: var(--destructive-hover);
   --color-border: var(--border);
   --color-input: var(--input);
   --color-ring: var(--ring);
@@ -85,11 +88,13 @@
   --background: #fff; /* pale blue light background */
   --foreground: #1a202c; /* primary dark text */
   --card: #ffffff; /* white cards */
+  --card-hover: #616161; /* white cards */
   --card-foreground: #1a202c; /* text on cards */
   --popover: #e6fffa; /* soft teal accent background */
   --popover-foreground: #2c7a7b; /* dark teal text */
 
   --primary: #3c83f5; /* primary blue */
+  --primary-hover: #0062ff; /* primary blue */
   --primary-foreground: #ffffff; /* white text on primary */
   --secondary: #bee3f8; /* light blue pastel */
   --secondary-foreground: #4a5568; /* muted gray text */
@@ -101,6 +106,7 @@
   --accent-foreground: #ffffff; /* white text on accent */
 
   --destructive: #f56565; /* error / destructive red */
+  --destructive-hover: #ee4242; /* error / destructive red */
 
   --border: #cbd5e0; /* light gray border */
   --input: #e2e8f0; /* input background */
@@ -262,6 +268,10 @@ li {
   cursor: pointer;
 }
 
+* {
+  user-select: none;
+}
+
 @media only screen and (min-width: 600px) {
   html {
     height: 100vh;
@@ -409,9 +419,7 @@ li {
     flex: 1;
     max-width: 448px;
     width: 100%;
-    margin: auto;
     height: 95dvh;
-
     position: relative;
     z-index: 1;
   }
